@@ -17,6 +17,10 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for CVS:
 
+server/skills.c: In do_throw() abort processing if the thrown object was
+   destroyed before it gets its first move.
+Andreas Kirschbaum 2005-11-06
+
 server/build_map.c: test FLAG_IS_FLOOR too, type == FLOOR is not always enough.
 Ryo 2005-11-05
 
